# Robots

module 3/ex01/service_full_name/: CMakeLists.txt  package.xml
module 3/ex01/service_full_name/src/: client_node.cpp  service_node.cpp
module 3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
module 3/ex03/: doctor.txt
module 3/ex04/move_to_goal/: package.xml  setup.py
module 3/ex04/move_to_goal/move_to_goal/: move_to_goal.py
module 3/ex05/: CMakeLists.txt  package.xml
module 3/ex05/action/: CleaningTask.action
module 3/ex05/action_cleaning_robot/: CMakeLists.txt  package.xml
module 3/ex05/action_cleaning_robot/action/: CleaningTask.action
module 3/ex05/action_cleaning_robot/scripts/: cleaning_client.py  cleaning_server.py
module 3/ex05/action_cleaning_robot/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module 3/ex05/scripts/: cleaning_action_client.py  cleaning_action_server.py
module 4/ex01/: frames_2025-10-28_20.49.35.gv  last_transform.txt  transform.txt
module 4/ex02/carrot_follower/: package.xml  setup.cfg  setup.py
module 4/ex02/carrot_follower/carrot_follower/: carrot_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
module 4/ex02/carrot_follower/launch/: carrot.rviz  carrot_demo.launch.py
module 4/ex02/carrot_follower/resource/: carrot_follower
module 4/ex02b/turtle_multi_target/: package.xml  setup.py
module 4/ex02b/turtle_multi_target/launch/: multi_target_demo.launch.py
module 4/ex02b/turtle_multi_target/resource/: turtle_multi_target
module 4/ex02b/turtle_multi_target/turtle_multi_target/: keyboard_switch.py  target_switcher.py  turtle_controller.py  turtle_tf2_broadcaster.py
module 4/ex03/learning_tf2_py/: package.xml  setup.py
module 4/ex03/learning_tf2_py/launch/: demo.launch.py
module 4/ex03/learning_tf2_py/learning_tf2_py/: broadcaster.py  listener.py
